--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -26,8 +26,9 @@
     
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
     .navbar{
-      display: none;
+        width: 100%;
+        font-size: 10px;
     }
 }
