--- a/src/Styles/Navbar.css
+++ b/src/Styles/Navbar.css
@@ -14,9 +14,9 @@
     color: white;
     text-decoration: none;
     padding: 0 25px;
-    -webkit-transition: -webkit-transform .8s ease-in-out;
+    /* -webkit-transition: -webkit-transform .8s ease-in-out;
     -ms-transition: -ms-transform .8s ease-in-out;
-    transition: transform .8s ease-in-out;  
+    transition: transform .8s ease-in-out;   */
 }
 .navbar a:hover{
     color: #00b8ff;
